syntax = "proto3";
package floors;
option go_package = "floors/";

message Start {
    int32 id = 1;
}

message ReadyRequest {
    int32 id = 1;
    bool is_ready = 2;
}

message ReadyAnswer {
    bool continue = 2;
}

message Floor1ResultsRequest {
    int32 id = 1;
    int32 selected_weapon = 2;
    int32 rand_number = 3;
}

message Floor1ResultsAnswer {
    string message = 1;
    bool is_dead =  2;
}

message Floor2PathRequest {
    int32 id = 1;
    int32 selected_path = 2;
}

message Floor2PathAnswer {
    string message = 1;
    bool is_out = 2;
}

message Floor3Try {
    int32 id = 1;
    int32 n_tries = 2;
    int32 n_good_tries = 3;
    int32 rand_number = 4;
}

message Floor3ResultsRequest {
    int32 id = 1;
    int32 n_good_tries = 2;
}

message Floor3ResultsAnswer {
    string message =1;
    bool is_dead = 2;
}

service FloorsService {
    rpc StartMission(Start) returns (Start) {}
    rpc MercenaryReady(ReadyRequest) returns (ReadyAnswer) {}
    rpc Floor1(Floor1ResultsRequest) returns (Floor1ResultsAnswer) {}
    rpc Floor2(Floor2PathRequest) returns (Floor2PathAnswer) {}
    rpc Floor3(Floor3Try) returns (Floor3Try) {}
    rpc Floor3Results(Floor3ResultsRequest) returns (Floor3ResultsAnswer) {}
}
